--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 node_modules
 package-lock.json
 restaurant_backend.rar
+e-restou-alziron-firebase-adminsdk-37aq4-883e03d2e8.json
+erestau-1-firebase.json
+.env
